cargo-features = ["edition2021"]

[package]
name = "idmon-core"
version = "0.1.0"
edition = "2021"
license = "Apache"
publish = false
authors = ["Sergey Bushnyak <sergey.bushnyak@sigrlami.eu>"]
exclude = [
    "TODO.org",
    "test/*",
]
readme = "README.md"
keywords = ["oracle", "solana"]

[dependencies]
solana-program = "=1.9.1"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.9.1"
solana-sdk = "=1.9.1"
solana-validator = "=1.9.1"

[lib]
crate-type = ["cdylib", "lib"]
